<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookStore</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_new_product">Add New Product</string>
    <string name="all_products">All Products</string>
    <string name="edit_product">Edit Product</string>
    <string name="btnviewProducts">View Products</string>
    <string name="btncreateProduct">Add New</string>
    <string name="bookTitle">Book Title</string>
    <string name="titleHint">Enter book tittle here</string>
    <string name="priceLabel">Price</string>
    <string name="priceHint">How much does it cost?</string>
    <string name="descriptionLabel">Description</string>
    <string name="descriptionHint">Short description of the book</string>
    <string name="createProductLabel">Create Product</string>
    <string name="savechanges">Save Changes</string>
    <string name="delete">Delete</string>
    

</resources>
